Modified the modal for Warning the user to use the Translated button to save its work on a segment: - now the user may even click outside of the modal to change it - message font size reduced - z-index of the modal fixed (it's above all other elements in the UI) - clicking on the label "Do not display again" change the adjacent checkbox

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -194,7 +194,7 @@ box-shadow: inset 0 1px 3px 0px #ccc;
 
 .number{
 	width:50px !important;	position:absolute;	top:18px;left:-55px;text-align:center;	display:block;	height:10px;
-		font-size:12px;z-index:99999;color:#999;text-decoration:none; cursor: default;}
+		font-size:12px;z-index:999;color:#999;text-decoration:none; cursor: default;}
 section:hover .number{color:#6d6e71}		
 		
 		.editor .number{
@@ -779,7 +779,7 @@ section.status-new.opened .editarea
 textarea, input, .editarea, .search-editarea, select  {
 outline: none !important
 }
-.source{position:relative;z-index:9999; word-break: break-all;
+.source{position:relative;z-index:999; word-break: break-all;
 }
 .suggestion_source,
 .translation
@@ -1294,6 +1294,11 @@ section.mismatch li.tag-mismatch
 	display: none;
 	}
 
+#alertConfirmTranslation p
+    {
+    font-size: 80%;
+    }
+    
 /*RTL language*/
 .editarea.rtl, .search-editarea.rtl, .source.rtl, .graysmall li.rtl {direction: rtl !important; text-align: right !important;}
 
